# currency-detection

./: Inferencing.ipynb  README.md  currency_api.py  pyproject.toml  requirements.txt
core/: main.py
